rental-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rentalservice
  name: rentalservice
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: rentalservice
  type: NodePort
status:
  loadBalancer: {}
